@@ -33,6 +33,9 @@ static void	__hashset_free_entry(zbx_hashset_t *hs, ZBX_HASHSET_ENTRY_T *entry);
 
 static void	__hashset_free_entry(zbx_hashset_t *hs, ZBX_HASHSET_ENTRY_T *entry)
 {
+	if (NULL != hs->clean_func)
+		hs->clean_func(entry->data);
+
 	hs->mem_free_func(entry);
 }
 
@@ -42,7 +45,7 @@ void	zbx_hashset_create(zbx_hashset_t *hs, size_t init_size,
 				zbx_hash_func_t hash_func,
 				zbx_compare_func_t compare_func)
 {
-	zbx_hashset_create_ext(hs, init_size, hash_func, compare_func,
+	zbx_hashset_create_ext(hs, init_size, hash_func, compare_func, NULL,
 					ZBX_DEFAULT_MEM_MALLOC_FUNC,
 					ZBX_DEFAULT_MEM_REALLOC_FUNC,
 					ZBX_DEFAULT_MEM_FREE_FUNC);
@@ -51,6 +54,7 @@ void	zbx_hashset_create(zbx_hashset_t *hs, size_t init_size,
 void	zbx_hashset_create_ext(zbx_hashset_t *hs, size_t init_size,
 				zbx_hash_func_t hash_func,
 				zbx_compare_func_t compare_func,
+				zbx_clean_func_t clean_func,
 				zbx_mem_malloc_func_t mem_malloc_func,
 				zbx_mem_realloc_func_t mem_realloc_func,
 				zbx_mem_free_func_t mem_free_func)
@@ -67,6 +71,7 @@ void	zbx_hashset_create_ext(zbx_hashset_t *hs, size_t init_size,
 
 	hs->hash_func = hash_func;
 	hs->compare_func = compare_func;
+	hs->clean_func = clean_func;
 	hs->mem_malloc_func = mem_malloc_func;
 	hs->mem_realloc_func = mem_realloc_func;
 	hs->mem_free_func = mem_free_func;
@@ -117,6 +122,7 @@ void	*zbx_hashset_insert_ext(zbx_hashset_t *hs, const void *data, size_t size, s
 
 	slot = hash % hs->num_slots;
 	entry = hs->slots[slot];
+
 	while (NULL != entry)
 	{
 		if (entry->hash == hash && hs->compare_func(entry->data, data) == 0)
@@ -195,6 +201,7 @@ void	*zbx_hashset_search(zbx_hashset_t *hs, const void *data)
 
 	slot = hash % hs->num_slots;
 	entry = hs->slots[slot];
+
 	while (NULL != entry)
 	{
 		if (entry->hash == hash && hs->compare_func(entry->data, data) == 0)
